adjustments to opt methods in reference to https://github.com/stleary/JSON-java/issues/334